test/corpus/function-calls.txt
================================================================================
Namespaced Function Call
================================================================================

global::coalesce()

--------------------------------------------------------------------------------

(document
  (func_call_expression
    namespace: (identifier)
    identifier: (identifier)))

================================================================================
Non-Namespaced Function Call
================================================================================

coalesce()

--------------------------------------------------------------------------------

(document
  (func_call_expression
    identifier: (identifier)))

================================================================================
Namespaced Function Call With Arguments
================================================================================

global::coalesce(null, someField, "someString", 1, ["a"], {"someKey": "someValue"})

--------------------------------------------------------------------------------

(document
  (func_call_expression
    namespace: (identifier)
    identifier: (identifier)
    arg: (null)
    arg: (identifier)
    arg: (string
      (string_content))
    arg: (number)
    arg: (array
      (string
        (string_content)))
    arg: (object
      (object_entry
        key: (string
          (string_content))
        value: (string
          (string_content))))))

================================================================================
Non-Namespaced Function Call With Arguments
================================================================================

coalesce(null, someField, "someString", 1, ["a"], {"someKey": "someValue"})

--------------------------------------------------------------------------------

(document
  (func_call_expression
    identifier: (identifier)
    arg: (null)
    arg: (identifier)
    arg: (string
      (string_content))
    arg: (number)
    arg: (array
      (string
        (string_content)))
    arg: (object
      (object_entry
        key: (string
          (string_content))
        value: (string
          (string_content))))))
