test/corpus/queries.txt
================================================================================
Query A
================================================================================

*[0...50] {
  _id
}


--------------------------------------------------------------------------------

(document
  (projection_traversal_expression
    base: (slice_traversal_expression
      base: (everything_expression)
      range: (exclusive_range
        left: (number)
        right: (number)))
    scope: (projection_entry
      (identifier))))

================================================================================
Query B
================================================================================

*[_type == "project" && _id == $projectId] {
  "navigation": navigation[] {
    ...coalesce(
      select(
        $preview => *[_id == 'drafts.' + ^._ref][0],
        null
      ),
      *[_id == ^._ref][0]
    )
  }
}

--------------------------------------------------------------------------------

(document
  (projection_traversal_expression
    base: (element_access_traversal_expression
      base: (everything_expression)
      idx: (logical_and_expression
        left: (equality_expression
          left: (identifier)
          right: (string
            (string_content)))
        right: (equality_expression
          left: (identifier)
          right: (identifier
            (parameter)))))
    scope: (projection_entry
      (object_entry
        key: (string
          (string_content))
        value: (projection_traversal_expression
          base: (array_postfix_traversal_expression
            base: (identifier))
          scope: (projection_entry
            (spread_expression
              (func_call_expression
                identifier: (identifier)
                arg: (func_call_expression
                  identifier: (identifier)
                  arg: (pair
                    key: (identifier
                      (parameter))
                    value: (element_access_traversal_expression
                      base: (element_access_traversal_expression
                        base: (everything_expression)
                        idx: (equality_expression
                          left: (identifier)
                          right: (binary_plus_expression
                            left: (string
                              (string_content))
                            right: (attribute_access_traversal_expression
                              base: (parent_expression)
                              scope: (identifier)))))
                      idx: (number)))
                  arg: (null))
                arg: (element_access_traversal_expression
                  base: (element_access_traversal_expression
                    base: (everything_expression)
                    idx: (equality_expression
                      left: (identifier)
                      right: (attribute_access_traversal_expression
                        base: (parent_expression)
                        scope: (identifier))))
                  idx: (number))))))))))

================================================================================
Query C
================================================================================

*[] {
  fooString: "foo" + @.string,
}

--------------------------------------------------------------------------------

(document
  (projection_traversal_expression
    base: (array_postfix_traversal_expression
      base: (everything_expression))
    scope: (projection_entry
      (object_entry
        key: (identifier)
        value: (binary_plus_expression
          left: (string
            (string_content))
          right: (attribute_access_traversal_expression
            base: (this_expression)
            scope: (identifier)))))))

================================================================================
Query D
================================================================================

*[_type == "jam"] {
  _id,
  date,
  track->{
    name,
    album->{
      name,
      "appleMusicImageUrl": coalesce(
        appleMusicImageUrl,
        image.asset->url
      ),
      'color': image.asset->metadata.palette.dominant.background,
    },
    artists[]->{
      name
    },
    'appleMusicUrl': dataByPlatform.appleMusic.url,
    'spotifyUrl': dataByPlatform.spotify.url,
    'youtubeUrl': dataByPlatform.youtube.url,
  }
} | order(date desc)

--------------------------------------------------------------------------------

(document
  (pipeline_expression
    base: (projection_traversal_expression
      base: (element_access_traversal_expression
        base: (everything_expression)
        idx: (equality_expression
          left: (identifier)
          right: (string
            (string_content))))
      scope: (projection_entry
        (identifier))
      scope: (projection_entry
        (identifier))
      scope: (projection_entry
         (projection_traversal_expression
         base: (dereference_traversal_expression
            base: (identifier))
          scope: (projection_entry
            (identifier))
          scope: (projection_entry
            (projection_traversal_expression
              base: (dereference_traversal_expression
                base: (identifier))
              scope: (projection_entry
                (identifier))
              scope: (projection_entry
                (object_entry
                  key: (string
                    (string_content))
                  value: (func_call_expression
                    identifier: (identifier)
                    arg: (identifier)
                    arg: (attribute_access_traversal_expression
                      base: (dereference_traversal_expression
                        base: (attribute_access_traversal_expression
                          base: (identifier)
                          scope: (identifier)))
                      scope: (identifier)))))
              scope: (projection_entry
                (object_entry
                  key: (string
                    (string_content))
                  value: (attribute_access_traversal_expression
                    base: (attribute_access_traversal_expression
                      base: (attribute_access_traversal_expression
                        base: (attribute_access_traversal_expression
                          base: (dereference_traversal_expression
                            base: (attribute_access_traversal_expression
                              base: (identifier)
                              scope: (identifier)))
                          scope: (identifier))
                        scope: (identifier))
                      scope: (identifier))
                    scope: (identifier))))))
          scope: (projection_entry
            (projection_traversal_expression
              base: (dereference_traversal_expression
                base: (array_postfix_traversal_expression
                  base: (identifier)))
              scope: (projection_entry
                (identifier))))
          scope: (projection_entry
            (object_entry
              key: (string
                (string_content))
              value: (attribute_access_traversal_expression
                base: (attribute_access_traversal_expression
                  base: (identifier)
                  scope: (identifier))
                scope: (identifier))))
          scope: (projection_entry
            (object_entry
              key: (string
                (string_content))
              value: (attribute_access_traversal_expression
                base: (attribute_access_traversal_expression
                  base: (identifier)
                  scope: (identifier))
                scope: (identifier))))
          scope: (projection_entry
            (object_entry
              key: (string
                (string_content))
              value: (attribute_access_traversal_expression
                base: (attribute_access_traversal_expression
                  base: (identifier)
                  scope: (identifier))
                scope: (identifier)))))))
    scope: (func_call_expression
      identifier: (identifier)
      arg: (desc_expression
        left: (identifier)))))
